Fixed background gradient repeating on Firefox

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,9 @@
 }
 
 body {
+	height: 100%;
 	margin: 0px;
+	background: #0c892f;
 	background: linear-gradient(to bottom, #0c892f, #085f20);
 }
 
